--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <table cellspacing=0 cellpadding=0 border=0>
           <tr>
             <td valign="bottom">
-              <img src="images/logo.png" border="0" width="173" style="margin-right: -6px;">
+              <img src="http://stidatos.com/firma/images/logo.png" border="0" width="173" style="margin-right: -6px;">
             </td>
 
             <td style="width: 105px; color: #000000;" valign="bottom">
@@ -34,7 +34,7 @@
         <table style="width: 100%;" cellspacing=0 cellpadding=0 border=0>
           <tr>
             <td colspan="3" align="right" valign="top" style="vertical-align: top;">
-              <img width="90" style="width: 90px;" src="images/microsoft-parner@2x.png" border="0">
+              <img width="90" style="width: 90px;" src="http://stidatos.com/firma/images/microsoft-parner@2x.png" border="0">
             </td>
           </tr>
 
@@ -51,16 +51,16 @@
 
           <tr>
             <td align="left" valing="center" style="font-size: 9pt; padding-bottom: 5px;">
-              <img width="16" src="images/phone.png" border=0 style="vertical-align: sub;"> 809-318-5254
+              <img width="16" src="http://stidatos.com/firma/images/phone.png" border=0 style="vertical-align: sub;"> 809-318-5254
             </td>
 
             <td align="center" valing="center" style="font-size: 9pt; text-align: center; padding-bottom: 5px;">
-              <img width="16" src="images/email.png" border=0 style="vertical-align: sub;"> wdelacruz@stidatos.com
+              <img width="16" src="http://stidatos.com/firma/images/email.png" border=0 style="vertical-align: sub;"> wdelacruz@stidatos.com
             </td>
 
             <td align="center" valing="center" style="font-size: 9pt; text-align: center; padding-bottom: 5px;">
               <a href="http://stidatos.com" style="text-decoration: none; color: #191818;">
-                <img width="16" src="images/web.png" border=0 style="vertical-align: sub;"> www.stidatos.com
+                <img width="16" src="http://stidatos.com/firma/images/web.png" border=0 style="vertical-align: sub;"> www.stidatos.com
               </a>
             </td>
           </tr>
@@ -75,16 +75,26 @@
             <td style=" border-top: solid 1px #1226AA; vertical-align: middle; text-align: right;" valign="middle"
               align="right">
               <br>
-              <a href="#"><img width="25" src="images/instagram.png" border=0></a>&nbsp;
-              &nbsp;&nbsp;&nbsp;<a href="#"><img width="25" src="images/in.png" border=0></a>&nbsp;&nbsp;&nbsp;
-              &nbsp;<a href="#"><img width="25" src="images/facebook.png" border=0></a>
+              <a href="https://www.instagram.com/stidatos/" target="_blank">
+                <img width="25" src="http://stidatos.com/firma/images/instagram.png" border=0>
+              </a>
+
+              &nbsp;&nbsp;&nbsp;&nbsp;
+              <a href="https://www.linkedin.com/company/stidatos" target="_blank">
+                <img width="25" src="http://stidatos.com/firma/images/in.png" border=0>
+              </a>
+              &nbsp;&nbsp;&nbsp;&nbsp;
+
+              <a href="https://www.facebook.com/srlsti" target="_blank">
+                <img width="25" src="http://stidatos.com/firma/images/facebook.png" border=0>
+              </a>
             </td>
           </tr>
         </table>
       </td>
 
       <td width="35" style="width: 35px;">&nbsp;</td>
-      <td><img width="103" style="width: 103px;" src="images/binary.png"></td>
+      <td><img width="103" style="width: 103px;" src="http://stidatos.com/firma/images/binary.png"></td>
     </tr>
   </table>
 </body>
