Removing text decoration from social icons

--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
         <table style="width: 100%;" cellspacing=0 cellpadding=0 border=0>
           <tr>
             <td colspan="3" align="right" valign="top" style="vertical-align: top;">
-              <img width="90" style="width: 90px;" src="http://stidatos.com/firma/images/microsoft-parner@2x.png" border="0">
+              <img width="90" style="width: 90px;" src="http://stidatos.com/firma/images/microsoft-parner@2x.png"
+                border="0">
             </td>
           </tr>
 
@@ -51,16 +52,19 @@
 
           <tr>
             <td align="left" valing="center" style="font-size: 9pt; padding-bottom: 5px;">
-              <img width="16" src="http://stidatos.com/firma/images/phone.png" border=0 style="vertical-align: sub;"> 809-318-5254
+              <img width="16" src="http://stidatos.com/firma/images/phone.png" border=0 style="vertical-align: sub;">
+              809-318-5254
             </td>
 
             <td align="center" valing="center" style="font-size: 9pt; text-align: center; padding-bottom: 5px;">
-              <img width="16" src="http://stidatos.com/firma/images/email.png" border=0 style="vertical-align: sub;"> wdelacruz@stidatos.com
+              <img width="16" src="http://stidatos.com/firma/images/email.png" border=0 style="vertical-align: sub;">
+              wdelacruz@stidatos.com
             </td>
 
             <td align="center" valing="center" style="font-size: 9pt; text-align: center; padding-bottom: 5px;">
               <a href="http://stidatos.com" style="text-decoration: none; color: #191818;">
-                <img width="16" src="http://stidatos.com/firma/images/web.png" border=0 style="vertical-align: sub;"> www.stidatos.com
+                <img width="16" src="http://stidatos.com/firma/images/web.png" border=0 style="vertical-align: sub;">
+                www.stidatos.com
               </a>
             </td>
           </tr>
@@ -75,17 +79,17 @@
             <td style=" border-top: solid 1px #1226AA; vertical-align: middle; text-align: right;" valign="middle"
               align="right">
               <br>
-              <a href="https://www.instagram.com/stidatos/" target="_blank">
+              <a style="text-decoration: none;" href="https://www.instagram.com/stidatos/" target="_blank">
                 <img width="25" src="http://stidatos.com/firma/images/instagram.png" border=0>
               </a>
 
               &nbsp;&nbsp;&nbsp;&nbsp;
-              <a href="https://www.linkedin.com/company/stidatos" target="_blank">
+              <a style="text-decoration: none;" href="https://www.linkedin.com/company/stidatos" target="_blank">
                 <img width="25" src="http://stidatos.com/firma/images/in.png" border=0>
               </a>
               &nbsp;&nbsp;&nbsp;&nbsp;
 
-              <a href="https://www.facebook.com/srlsti" target="_blank">
+              <a style="text-decoration: none;" href="https://www.facebook.com/srlsti" target="_blank">
                 <img width="25" src="http://stidatos.com/firma/images/facebook.png" border=0>
               </a>
             </td>
