Fixing issue on gmail and mail clients

--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
       <td width="35" style="width: 35px;">&nbsp;</td>
 
       <td style="width: 400px;">
-        <table style="width: 100%;" cellspacing=0 cellpadding=0 border=0>
+        <table style="width: 400px;" cellspacing=0 cellpadding=0 border=0>
           <tr>
             <td colspan="3" align="right" valign="top" style="vertical-align: top;">
-              <img width="90" style="width: 90px;" src="http://stidatos.com/firma/images/microsoft-parner@2x.png"
-                border="0">
+              <img src="http://stidatos.com/firma/images/microsoft-parner@2x.png" border="0" width="90"
+                style="width: 90px;">
             </td>
           </tr>
 
@@ -51,33 +51,47 @@
           </tr>
 
           <tr>
-            <td align="left" valing="center" style="font-size: 9pt; padding-bottom: 5px;">
-              <img width="16" src="http://stidatos.com/firma/images/phone.png" border=0 style="vertical-align: sub;">
-              809-318-5254
-            </td>
+            <td colspan="3" width="400" style="padding-bottom: 5px;border-bottom: solid 1px #1226AA;">
+              <table style="width: 400px;" cellspacing=0 cellpadding=0 border="0">
+                <tr>
+                  <td width="18" valing="center" align="left">
+                    <img src="http://stidatos.com/firma/images/phone.png" border=0 width="16">
+                  </td>
 
-            <td align="center" valing="center" style="font-size: 9pt; text-align: center; padding-bottom: 5px;">
-              <img width="16" src="http://stidatos.com/firma/images/email.png" border=0 style="vertical-align: sub;">
-              wdelacruz@stidatos.com
-            </td>
+                  <td  width="95" align="left" valing="center" style="font-size: 9pt;">
+                    809-318-5254
+                  </td>
 
-            <td align="center" valing="center" style="font-size: 9pt; text-align: center; padding-bottom: 5px;">
-              <a href="http://stidatos.com" style="text-decoration: none; color: #191818;">
-                <img width="16" src="http://stidatos.com/firma/images/web.png" border=0 style="vertical-align: sub;">
-                www.stidatos.com
-              </a>
+                  <td align="left" valing="center" width="18">
+                    <img src="http://stidatos.com/firma/images/email.png" border=0 width="16">
+                  </td>
+
+                  <td align="left" valing="center" style="font-size: 9pt;">
+                    wdelacruz@stidatos.com
+                  </td>
+
+                  <td align="left" valing="center" width="18">
+                    <img src="http://stidatos.com/firma/images/web.png" border=0 width="16">
+                  </td>
+
+                  <td  width="97" align="left" valing="center" style="font-size: 9pt;">
+                    <a href="http://stidatos.com" style="text-decoration: none; color: #191818;">
+                      www.stidatos.com
+                    </a>
+                  </td>
+                </tr>
+              </table>
             </td>
           </tr>
 
           <tr>
-            <td colspan="2" valign="middle" style="font-size: 9pt; border-top: solid 1px #1226AA;">
+            <td colspan="2" valign="middle" style="font-size: 9pt;">
               <br>
               Ave. Independencia 348, El cacique,<br>
               Santo Domingo, República Dominicana
             </td>
 
-            <td style=" border-top: solid 1px #1226AA; vertical-align: middle; text-align: right;" valign="middle"
-              align="right">
+            <td style="vertical-align: middle; text-align: right;" valign="middle" align="right">
               <br>
               <a style="text-decoration: none;" href="https://www.instagram.com/stidatos/" target="_blank">
                 <img width="25" src="http://stidatos.com/firma/images/instagram.png" border=0>
